force-app/main/default/objects/Bank_Account__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>中国银行</fullName>
            </value>
            <value>
                <fullName>工商银行</fullName>
            </value>
            <value>
                <fullName>农业银行</fullName>
            </value>
            <value>
                <fullName>建设银行</fullName>
            </value>
            <value>
                <fullName>招商银行</fullName>
            </value>
            <value>
                <fullName>交通银行</fullName>
            </value>
            <value>
                <fullName>浦发银行</fullName>
            </value>
            <value>
                <fullName>广发银行</fullName>
            </value>
            <value>
                <fullName>兴业银行</fullName>
            </value>
            <value>
                <fullName>光大银行</fullName>
            </value>
            <value>
                <fullName>邮储银行</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>