force-app/main/default/objects/Bank_Account__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bank Accounts</relationshipLabel>
    <relationshipName>Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>